--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,7 +2,8 @@ run:
   deadline: 5m
 
 output:
-  format: colored-line-number
+  formats:
+  - format: colored-line-number
 
 issues:
   exclude-use-default: false
